--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ ext.defaultServer = true
 
 minecraft {
 	minecraftVersion = "1.6.4"
-    accessTransformers = "Core/src/main/resources/feCore.at"
+    accessTransformers += "Core/src/main/resources/feCore.at"
 }
 
 // for the default internal minecraft jar
