--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,7 @@ subprojects {
                 attributes "FECoreASM": asm.join(' '), "FECoreAT": ats.join(' ')
                 // libds and deps
                 attributes "FECoreLibsMaven": deps.join(' ')
+                attributes "TweakClass": "com.forgeessentials.core.classloading.FETweaker" // temp until we can do something about that pesky coreloader
             }
         }
 
