added gradle wrapper

--- a/build.gradle
+++ b/build.gradle
@@ -219,3 +219,7 @@ public class JsonTask extends DefaultTask
 		return project.file(output)
 	}
 }
+
+task wrapper(type: Wrapper) {
+	gradleVersion = '1.10'
+}
